--- a/BasicsofPythonProgramming/Intro.ipynb
+++ b/BasicsofPythonProgramming/Intro.ipynb
@@ -284,7 +284,142 @@
    "source": [
     "num=3\n",
     "num1= '1234'\n",
-    "print('add of num and num1:',(num*num1)) #this is concat,1234 4 bar aaya"
+    "print('add of num and num1:',(num*num1)) #this is concatenation,1234 4 bar aaya"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "name =input('enter your bname')\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if i am using i/p as a function then o/p will be string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input('enter num'))\n",
+    "print(num)\n",
+    "print(type(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum 27\n"
+     ]
+    }
+   ],
+   "source": [
+    "numberrr=int(input(\"enter the first number\"))\n",
+    "numberr2r=int(input(\"enter the first number\"))\n",
+    "number3=numberrr+numberr2r\n",
+    "\n",
+    "print('sum',number3)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "addition of two given numbers:  68.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1=float(input('enter the first number'))\n",
+    "num2=float(input('enter the second number'))\n",
+    "num3=num1+num2\n",
+    "\n",
+    "print('addition of two given numbers: ',num3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Stu=ructures in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20.2, 'Hello World']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List: mutable DS\n",
+    "lst = [10, 20.20, 'Hello World']    #one dimensional, 1 h bracket, 2 me 2D, 3 me 3D\n",
+    "print(lst)"
    ]
   },
   {
