--- a/BasicsofPythonProgramming/Intro.ipynb
+++ b/BasicsofPythonProgramming/Intro.ipynb
@@ -426,6 +426,133 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "radius of circle: 20.417849999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AREA OF CIRCLE\n",
+    "\n",
+    "pi=3.14\n",
+    "r=float(input(\"please enter radius: \"))\n",
+    "area=pi*r*r\n",
+    "print('radius of circle:', area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "radius of circle: 12.56\n"
+     ]
+    }
+   ],
+   "source": [
+    "# circumference OF CIRCLE\n",
+    "\n",
+    "\n",
+    "pi=3.14\n",
+    "r=float(input(\"please enter radius: \"))\n",
+    "circumference=2*pi*r\n",
+    "print('radius of circle:', circumference)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"hello\"\n",
+    "str1=\"world\"\n",
+    "str2=(str+' '+str1)\n",
+    "print(str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Circumference of circle is 12.56mm\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'area' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_152\\3258937762.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# F string method\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'Circumference of circle is {circumference}mm'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'radius of circle {r}mm and Area of circle is {area}mm^2'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'area' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# F string method\n",
+    "print(f'Circumference of circle is {circumference}mm')\n",
+    "print(f'radius of circle {r}mm and Area of circle is {area}mm^2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W\n",
+      "r\n",
+      "llo Wel\n",
+      "Hello Welcome to WOrld of Python Programmin\n",
+      "HloWloet Ol fPto rgamn\n",
+      "Hole lft gm\n"
+     ]
+    }
+   ],
+   "source": [
+    "    # string indexing\n",
+    "\n",
+    "St= 'Hello Welcome to WOrld of Python Programming'\n",
+    "\n",
+    "#String Slicing\n",
+    "print(St[6])\n",
+    "print(St[-10])\n",
+    "print(St[2:9]) #without 9th\n",
+    "print(St[:-1]) #without -1 total\n",
+    "print(St[::2]) # start:stop:step\n",
+    "print(St[::4]) # start:stop:step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
