--- a/BasicsofPythonProgramming/SLicing.ipynb
+++ b/BasicsofPythonProgramming/SLicing.ipynb
@@ -38,7 +38,7 @@
         }
       ],
       "source": [
-        "num1=float(input('enter the first number'))\n",
+        "  num1=float(input('enter the first number'))\n",
         "num2=float(input('enter the second number'))\n",
         "num3=num1+num2\n",
         "\n",
@@ -63,7 +63,7 @@
         },
         "outputId": "44cb6851-ff77-4342-8888-c6a60cb7d0a5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
         "id": "yBID4nexDFqm",
         "outputId": "0f3fac95-5d44-47eb-9b6e-5bf32985088d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "id": "-UKglb0ADoC7",
         "outputId": "5b8cf33e-02f2-40ef-cc45-01ebe310f745"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
         "id": "r3cjUZBhEukA",
         "outputId": "ef253dca-6a17-4a58-df74-d908dd9c5eea"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
       "source": [
         "# string indexing\n",
         "\n",
-        "\n",
+        "St= 'Hello Welcome to WOrld of Python Programming'\n",
         "\n",
         "#String Slicing\n",
         "print(St[6])\n",
@@ -182,9 +182,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f4VY1_z_F467",
-        "outputId": "144a0d88-2d6f-4e1f-ccc9-e343a6a8a6b0"
+        "outputId": "e2df8790-c00d-417a-f832-2cddecbb621f"
       },
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,6 +206,8 @@
       "cell_type": "code",
       "source": [
         "St= 'Hello Welcome to WOrld of Python Programming'\n",
+        "print(St[::-1])\n",
+        "print(St[::1])\n",
         "print(St[4:-4:-1]) #no output coz starting and nding is gone"
       ],
       "metadata": {
@@ -213,14 +215,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Se_aZzvIcTG",
-        "outputId": "bc0a8bb6-2e83-42f1-d4b1-79c9aa80ff8c"
+        "outputId": "07057215-3763-4873-f47f-9e7d53cad544"
       },
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "gnimmargorP nohtyP fo dlrOW ot emocleW olleH\n",
+            "Hello Welcome to WOrld of Python Programming\n",
             "\n"
           ]
         }
@@ -229,7 +233,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#List defination\n",
+        "# *List defination: n dimensional array*\n",
         "\n",
         "lst=[100,200,300,400]\n",
         "print(lst[2])\n",
@@ -245,9 +249,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3YF7bHfDN2Um",
-        "outputId": "45dee395-2fa9-416c-f817-34d8ded07266"
+        "outputId": "3cd66a29-a3b3-489b-d3d6-b076286b611b"
       },
-      "execution_count": 24,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,6 +268,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "J4AcANXS4g40"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "lst2=[100,[200,300,[10,20,400,500,'Hi',[500],200],400,456],78]\n",
         "print(lst2[1][2][4])\n",
@@ -277,7 +290,7 @@
         "id": "PXy8S3RAN9Lb",
         "outputId": "90473480-fe38-4e55-8c9a-4147fd9eab54"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,10 +306,176 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "#1Apr2025\n",
+        "\n",
+        "lst=[]\n",
+        "lst.append('Hello')\n",
+        "lst.insert(1, 'Word')\n",
+        "print(lst)\n",
+        "\n",
+        "print(lst)\n",
+        "lst.remove('Hello')\n",
+        "print(lst)\n",
+        "lst.pop()"
       ],
       "metadata": {
-        "id": "Z_tjNWW6S68A"
+        "id": "Z_tjNWW6S68A",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 90
+        },
+        "outputId": "f44a4d52-b325-4fa6-b233-cdd6fc989b7b"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hello', 'Word']\n",
+            "['Hello', 'Word']\n",
+            "['Word']\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Word'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = [10, 20, 30, 40, 50, 60]\n",
+        "lst.append(60)\n",
+        "lst.insert(3,1000) #add specific index\n",
+        "lst.remove(30)\n",
+        "print(lst)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r_Y1io_tuSBE",
+        "outputId": "d50c8391-0adc-42d4-f519-54db56861ef2"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 1000, 40, 50, 60, 60]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst=[100,200,100,300,400,500,500]\n",
+        "# lst.remove(100)\n",
+        "# lst.remove(300) #first occurance will be removed\n",
+        "lst.pop(1) #index pe udega\n",
+        "print(lst)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "paVYAl5vyC9N",
+        "outputId": "8d65edc1-2144-4a4e-a3c0-d103f5109de6"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[100, 100, 300, 400, 500, 500]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst=[1,2,3,4,5,6,7,8,9,10]\n",
+        "for i in lst:\n",
+        "  print(i, end = \"  \") #print all with two spaces in between"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ur6SBg2a1DiK",
+        "outputId": "518424c7-4d53-4476-a660-897f2e19fb73"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  2  3  4  5  6  7  8  9  10  "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tup= (10,20,30)\n",
+        "print(type(tup)) #no duplicate in tuple round braces\n",
+        "\n",
+        "a={1,2,3,4,5} #set curly\n",
+        "print(type(a))\n",
+        "tup.count(10)\n",
+        "#list is n dimensional array"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "32sl6PI_3ScW",
+        "outputId": "44ff12c8-fb6c-4237-8c66-c44ef25973a3"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'tuple'>\n",
+            "<class 'set'>\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rFREZjMI4iTB"
       },
       "execution_count": null,
       "outputs": []
